# pyfme

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements_pip.txt
.github/workflows/: python-app.yml  python-dispatch.yml  python-publish.yml
docs/: getting_started.md  index.md  reference.md
examples/: create_tables_sqlalchemy.py
notebooks/: create_tables_sqlalchemy copy.ipynb  mssql_to_parquet.ipynb
pyfme/: __init__.py  startup_script.py
pyfme/dataset/: __init__.py  _datasetModel.py  _table.py  dataset_model.py  table.py
pyfme/io/: __init__.py  _xlsx.py  xlsx.py
rn3/: __init__.py
rn3/dataset/: dataset_model.py  dataset_referencedata.py  item.py  table.py
rn3/qaqc/: __init__.py  comparator.py  completeness.py  completeness_set.py  completness.py  dataset.py  get_completness_qc_results.sql  quality_test.py  read_sql.py
sql/: delete_all_tables_of_schema.sql
src/: import_xlsx.py
tests/: test_basic.py  test_datasetModel.py  test_qaqc.py  test_sql.py  test_xlsx.py
tests/data/: Reference Dataset - Reference data.xlsx  annexXVI.Table_1.csv  annexXVI.Table_5.csv  annexXVI.xlsx  fake_italy_reporting_tiny.xlsx  historical_releases.csv  nitrate_schema.json  pk_found.csv  questions.csv
